# harpie

./: .ghci2  ChangeLog.md  cabal.project  harpie.cabal  harpie.org  harpy.cabal  harpy.org  harry.cabal  harry.org  readme.md  readme.org  stack.yaml
.github/workflows/: haskell-ci.yml
app/: bug.hs
src/Harpie/: Array.hs  Fixed.hs  Shape.hs  Sort.hs
src/Harpy/: Array.hs  Fixed.hs  Shape.hs  Sort.hs
src/Harry/: Array.hs  Dynamic.hs  Fixed.hs  Shape.hs  Sort.hs
test/: doctests.hs
