cabal-version: 3.0
name: harry
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
copyright: Tony Day (c) 2016-2024
category: math
author: Tony Day
maintainer: tonyday567@gmail.com
homepage: https://github.com/tonyday567/harry#readme
bug-reports: https://github.com/tonyday567/harry/issues
synopsis: Hyper-rectangular Haskell arrays.
description:
    This package provides hyper-rectangular array functionality. Module names clash with each other and with the Prelude, so a clear import strategy is:

    == Usage

    >>> import Harry.Fixed qualified as F
    >>> import Harry.Shape qualified as S
    >>> import Harry.Array qualified as A

build-type: Simple
tested-with:
    , GHC == 9.10.1
    , GHC == 9.8.2
    , GHC == 9.6.5
extra-doc-files: ChangeLog.md

source-repository head
    type: git
    location: https://github.com/tonyday567/harry

common ghc-options-stanza
    ghc-options:
        -Wall
        -Wcompat
        -Widentities
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wpartial-fields
        -Wredundant-constraints

common ghc2021-stanza
    default-language: GHC2021

library
    import: ghc-options-stanza
    import: ghc2021-stanza
    hs-source-dirs: src
    build-depends:
        , QuickCheck           >=2.15.0 && <2.16
        , adjunctions          >=4.0 && <5
        , base                 >=4.14 && <5
        , distributive         >=0.4 && <0.7
        , first-class-families >=0.8.1 && <0.9
        , prettyprinter        >=1.7 && <1.8
        , quickcheck-instances >=0.3.31 && <0.4
        , random               >=1.2 && <1.3
        , vector               >=0.12.3 && <0.14
        , vector-algorithms    >=0.9.0 && <0.10
    exposed-modules:
        Harry.Array
        Harry.Fixed
        Harry.Shape
        Harry.Sort

test-suite doctests
    import: ghc2021-stanza
    main-is: doctests.hs
    hs-source-dirs: test
    build-depends:
        , base             >=4.14 && <5
        , doctest-parallel >=0.3 && <0.4
    ghc-options: -threaded
    type: exitcode-stdio-1.0
